[tool.poetry]
name = "tileserver"
version = "0.1"
description = ""
authors = ["Douglas <douglasemilio.ca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pydantic = "^2.4.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
